fix(questoes): carregar todas as questões + ingest 2019 com 90 itens

--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,8 @@ dist
 tools/questions/cache/
 tools/questions/out/
 tools/questions/.venv/
+tools/questions/__pycache__/
+tools/questions/**/*.pyc
 
 # DynamoDB Local files
 .dynamodb/
